# tui

./: pyproject.toml
TUI/journal/: app.py  domain.py  main.py  menu.py  models.py
TUI/tests/journal/: test_app.py  test_domain.py  test_menu.py
TUI/tests/validation/: test_regex.py
journal/: menu.py  models.py
tests/journal/: test_domain.py
validation/: regex.py
