[tool.poetry]
name = "TUI"
version = "0.1.0"
description = ""
authors = ["lorenzo <adducilorenzo@hotmail.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
valid8 = "^5.1.2"
pytest = "^7.4.3"
typeguard = "^4.1.5"
coverage = "^7.3.2"
mixer = "^7.2.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
